force-app/main/default/objects/Depot__c/fields/Call_Divert_Phone__c.field-meta.xml
<CustomField>
    <fullName>Call_Divert_Phone__c</fullName>
    <label>Call Divert Phone</label>
    <type>Phone</type>
</CustomField>