force-app/main/default/objects/Depot__c/fields/City_Suburb__c.field-meta.xml
<CustomField>
    <fullName>City_Suburb__c</fullName>
    <label>City/Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>