force-app/main/default/objects/Depot__c/fields/Depot_Sales__c.field-meta.xml
<CustomField>
    <fullName>Depot_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depot Sales</label>
    <type>Checkbox</type>
</CustomField>