force-app/main/default/objects/Depot__c/fields/Head_Offices__c.field-meta.xml
<CustomField>
    <fullName>Head_Offices__c</fullName>
    <label>Head Offices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>