force-app/main/default/objects/Depot__c/fields/Opening_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hours__c</fullName>
    <label>Opening Hours</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>