force-app/main/default/objects/Depot__c/fields/Phone_After_Hours__c.field-meta.xml
<CustomField>
    <fullName>Phone_After_Hours__c</fullName>
    <label>Phone After Hours</label>
    <type>Phone</type>
</CustomField>