force-app/main/default/objects/Depot__c/fields/PO_Box__c.field-meta.xml
<CustomField>
    <fullName>PO_Box__c</fullName>
    <label>PO Box</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>