force-app/main/default/objects/Depot__c/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <label>Post Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>